fix padding more about me button small screen size

--- a/src/styles/home/index_small.css
+++ b/src/styles/home/index_small.css
@@ -235,7 +235,7 @@ header img, .contact-cell img {
 }
 
 #about p {
-    padding: 0 2rem;
+    padding: 0 2rem 1.25rem;
     font-family: 'futurabook', sans-serif;
     font-size: 1.1rem;
     line-height: 1.6;
